apps/petclinc/petclinic_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app: petclinic
    app.kubernetes.io/instance: petclinic
    app.kubernetes.io/name: petclinic
  name: petclinic-ingress
  namespace: petclinic
spec:
  ingressClassName: nginx
  rules:
  - host: petclinic.prod.app.garageeducation.org
    http:
      paths:
      - backend:
          service:
            name: petclinic-service
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - petclinic.prod.app.garageeducation.org
    secretName: letsencrypt-production
